# rsync-backup

./: .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
examples/: config.yaml
rsync_backup/: config.py  job.py  manager.py  rsync.py  utils.py
rsync_backup/cmd/: cli.py
rsync_backup/tests/: base.py  test_noop.py
