[metadata]
name = rsync-backup
summary = Spawn rsync workers and step into directories
description-file =
    README.rst
author = Tobias Urdin
author-email = tobias.urdin@gmail.com
home-page = https://github.com/tobias-urdin/rsync-backup
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    rsync_backup

[entry_points]
console_scripts =
    rsync-backup = rsync_backup.cmd.cli:main
